# meshack

./: .env.example  .gitignore  Makefile  docker-compose.yml  pyproject.toml
app/: settings.py  urls.py
app/portfolio/: admin.py  models.py  urls.py  views.py
app/portfolio/helpers/: tasks.py
app/portfolio/migrations/: 0001_initial.py  0002_alter_category_options_alter_project_options_and_more.py  0003_alter_project_url.py  0004_alter_image_url_alter_project_thumbnail_image_url_and_more.py  0005_category_projects_done_category_skill_level.py  0006_profile_socials.py  0007_service.py  0008_alter_service_description.py  0009_extraimage.py  0010_remove_email_subject.py  0011_profile_resume_link.py  0012_aboutimages.py
app/static/css/: style.css
app/static/js/: custom.js  extra.js  theme.js
app/templates/: _contact-form.html  _contact-me.html  _contact-modal.html  _cursor.html  _email.html  _extras.html  _footer.html  _head.html  _loader.html  _menu.html  _scripts.html  _scroll-to-top.html  _style-option.html  about.html  contact.html  index.html  project.html
docker/: Dockerfile  start_api.sh
nginx/: nginx.conf
