[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Hesbon5600 <hesbonkiptoo5600@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
whitenoise = "^6.0.0"
django-feather = "^0.3.0"
gunicorn = "^20.1.0"
django-tinymce = "^3.4.0"
django-better-admin-arrayfield = "^1.4.2"
celery = "^5.2.3"
redis = "^4.2.1"
gevent = "^21.12.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest = "^5.2"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
