[project]
name = "meshack"
version = "0.1.0"
description = ""
authors = [{ name = "Hesbon Kiptoo", email = "hesbonkiptoo5600@gmail.com" }]
requires-python = ">=3.10"

dependencies = [
    "django (>=4.2.16)",
    "gunicorn>=20.1.0",
    "django-better-admin-arrayfield>=1.4.2",
    "celery>=5.2.3",
    "redis>=6.1.0",
    "gevent>=25.5.1",
    "psycopg2-binary>=2.9.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
pytest = "^5.2"
black = { version = "^22.3.0", allow-prereleases = true }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
